# irulan

./: CMakeLists.txt  README.md
inc/glad/: glad.h
inc/irulan/: irulan.h
inc/irulan/data/: Mesh.h  Vertex.h
inc/irulan/graph/: Descriptor.h  Framebuffer.h  RenderTarget.h  Renderer.h  Shader.h  Texture.h  Texture2D.h
inc/irulan/math/: Matrix4.h  Noise.h  Quaternion.h  Vector2.h  Vector2.tpp  Vector3.h  Vector3.tpp
inc/irulan/system/: App.h  Buffer.h  BufferAllocator.h  Log.h  Resource.h  ResourceManager.h  ResourceManager.tpp
inc/irulan/system/opengl/: Debug.h  Pointer.h  Pointer.tpp  Traits.h  oglPointer.h  oglPointer.tpp
src/irulan/data/: Mesh.cpp
src/irulan/graph/: Descriptor.cpp  Framebuffer.cpp  RenderTarget.cpp  Renderer.cpp  Shader.cpp  Texture.cpp  Texture2D.cpp
src/irulan/math/: Matrix4.cpp  Noise.cpp  Quaternion.cpp
src/irulan/system/: App.cpp  Buffer.cpp  BufferAllocator.cpp  Log.cpp  Resource.cpp
src/irulan/system/opengl/: Debug.cpp  Traits.cpp
test/: CMakeLists.txt  TestApp.cpp  TestApp.h  main.cpp
